[gd_scene load_steps=14 format=3 uid="uid://dbmijywc7wmpn"]

[ext_resource type="Script" path="res://suvivers_game.gd" id="1_r355d"]
[ext_resource type="PackedScene" uid="uid://1ckc58w5sfxa" path="res://player.tscn" id="2_g4smm"]
[ext_resource type="PackedScene" uid="uid://byt5n3frbq0y3" path="res://pine_tree.tscn" id="3_cmo6m"]
[ext_resource type="PackedScene" uid="uid://bngw71ai305qk" path="res://portal.tscn" id="4_aki8c"]
[ext_resource type="PackedScene" uid="uid://sy47hfuibnsb" path="res://level_id.tscn" id="5_fnaie"]
[ext_resource type="PackedScene" uid="uid://jfegp3gaq606" path="res://level_text.tscn" id="6_enhi1"]
[ext_resource type="AudioStream" uid="uid://bei8euextvvh5" path="res://music/tungD.wav" id="8_7b73c"]
[ext_resource type="PackedScene" uid="uid://cw1hghni1xh0h" path="res://item_gun.tscn" id="8_wgna2"]
[ext_resource type="PackedScene" uid="uid://cxrimu2c0gfae" path="res://pause.tscn" id="9_es06e"]
[ext_resource type="PackedScene" uid="uid://dvybmwr4hps8e" path="res://boss.tscn" id="10_fpmc5"]
[ext_resource type="PackedScene" uid="uid://dvjgkm8mx6hrt" path="res://won_the_game.tscn" id="11_7wxjg"]

[sub_resource type="Curve2D" id="Curve2D_dvyg8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -163, -129, 0, 0, 0, 0, 2051, -135, 0, 0, 0, 0, 2066, 1175, 0, 0, 0, 0, -184, 1187, 0, 0, 0, 0, -193, -111)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_wxpba"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 826, 75, 0, 0, 0, 0, 1399, 54, 0, 0, 0, 0, 1377, 408, 0, 0, 0, 0, 811, 425, 0, 0, 0, 0, 811, 70)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(10, 13)
script = ExtResource("1_r355d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -33

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(0.619608, 0.901961, 0.835294, 1)
offset_left = -38.0
offset_top = -1.0
offset_right = 1903.0
offset_bottom = 1094.0
color = Color(0.54902, 0.00392157, 0.933333, 1)

[node name="player" parent="." instance=ExtResource("2_g4smm")]
unique_name_in_owner = true
position = Vector2(902, 544)
rotation = -0.004403
collision_mask = 12

[node name="Path2D" type="Path2D" parent="player"]
position = Vector2(-896.667, -531.953)
rotation = 0.004403
curve = SubResource("Curve2D_dvyg8")

[node name="PathFollow2D" type="PathFollow2D" parent="player/Path2D"]
unique_name_in_owner = true
position = Vector2(-163, -129)
rotation = -0.00271002

[node name="Control" type="Control" parent="player"]
layout_mode = 3
anchors_preset = 0
offset_left = -899.596
offset_top = -547.966
offset_right = -859.596
offset_bottom = -507.966

[node name="ScoreText" type="Label" parent="player/Control"]
layout_mode = 0
offset_left = -5.0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 33
text = "Score: "

[node name="Score" type="Label" parent="player/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 112.0
offset_top = 4.0
offset_right = 483.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 33
text = "0"

[node name="Time" type="Label" parent="player/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 710.98
offset_top = 6.13049
offset_right = 750.98
offset_bottom = 52.1305
theme_override_font_sizes/font_size = 33
text = "0"

[node name="TimeLable" type="Label" parent="player/Control"]
layout_mode = 0
offset_left = 597.981
offset_top = 4.56691
offset_right = 694.981
offset_bottom = 50.5669
theme_override_font_sizes/font_size = 33
text = "Time: "

[node name="pineTree" parent="." instance=ExtResource("3_cmo6m")]
position = Vector2(289, 315)
rotation = -0.092736

[node name="pineTree2" parent="." instance=ExtResource("3_cmo6m")]
position = Vector2(550, 736)
rotation = 0.105447

[node name="pineTree3" parent="." instance=ExtResource("3_cmo6m")]
position = Vector2(167, 473)
rotation = 0.0709089

[node name="pineTree4" parent="." instance=ExtResource("3_cmo6m")]
position = Vector2(196, 1108)

[node name="pineTree5" parent="." instance=ExtResource("3_cmo6m")]
position = Vector2(1674, 210)
rotation = 0.048527

[node name="pineTree7" parent="." instance=ExtResource("3_cmo6m")]
position = Vector2(554, 64)

[node name="spawnMobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_left = -63.0
offset_top = -13.0
offset_right = 1949.0
offset_bottom = 1127.0
color = Color(0, 0, 0, 0.337255)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 180
text = "Game Over
"

[node name="Label2" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -37.5
offset_right = 76.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "

Press ENTER to play"

[node name="Path2DItem" type="Path2D" parent="."]
curve = SubResource("Curve2D_wxpba")

[node name="PathFollowItem" type="PathFollow2D" parent="Path2DItem"]
unique_name_in_owner = true
position = Vector2(826, 75)
rotation = -0.0366328

[node name="TimerItem" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="portal" parent="." instance=ExtResource("4_aki8c")]
position = Vector2(1805, 941)

[node name="level_id" parent="." instance=ExtResource("5_fnaie")]
level_id = 2

[node name="level_text" parent="." instance=ExtResource("6_enhi1")]
unique_name_in_owner = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7b73c")
autoplay = true
max_distance = 10000.0

[node name="item_gun" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(1170, 440)

[node name="item_gun2" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(1311, 450)

[node name="item_gun3" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(1442, 453)

[node name="pause" parent="." instance=ExtResource("9_es06e")]

[node name="boss" parent="." instance=ExtResource("10_fpmc5")]
position = Vector2(1933, 533)
health = 100

[node name="item_gun4" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(1047, 432)

[node name="item_gun5" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(967, 432)

[node name="item_gun6" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(919, 424)

[node name="item_gun7" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(1100, 426)

[node name="item_gun8" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(1234, 437)

[node name="item_gun9" parent="." instance=ExtResource("8_wgna2")]
position = Vector2(1367, 469)

[node name="won_the_game" parent="." instance=ExtResource("11_7wxjg")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="health_depleted" from="player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="spawnMobTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerItem" to="." method="_on_timer_item_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_clock_timer_timeout"]
